samples/_failures_safe/1761180527_dc392a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_768330c2.c: In function ‘main’:
./samples/SAFE/__tmp_768330c2.c:158:13: error: expected declaration or statement at end of input
  158 |             read_matrix(&mat1, "A");
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_768330c2.c:158:13: error: expected declaration or statement at end of input
